--- a/GE.WebUI/Views/Shared/DisplayTemplates/VMMateriallnfo.cshtml
+++ b/GE.WebUI/Views/Shared/DisplayTemplates/VMMateriallnfo.cshtml
@@ -1,9 +1,9 @@
-﻿@model VMPreviewInfo
+﻿@model VMMateriallnfo
 @{
     Layout = null;
 }
 
-<ul class="preview-info">
+<ul class="mat-info">
     <li>
         <i class="fa fa-clock-o"></i>: @(((DateTime)Model.DateCreate).ToString("dd.MM.yyy"))
     </li>
