--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="first">
-                        <img alt="game-exe.com" src="@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath)+"?height=30")" />
+                        <img alt="@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName))" src="@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath)+"?height=30")" />
                     </div>
                 </div>
                 <div class="col-md-6">
