--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -28,7 +28,22 @@
 
     <script src="~/Content/dist/js/site.min.js"></script>
     <script type="text/javascript">
+        resizeFooter();
+        $(window).resize(function () {
+            resizeFooter();
+        });
+
         $('#game-list').geGameMenu();
+
+        function resizeFooter()
+        {
+            var $footer = $('footer');
+            var h = $footer.height();
+            $footer.css({
+                'position': 'absolute'
+            });
+            $('body').css('margin-bottom', h+'px');
+        }
     </script>
     @RenderSection("scripts", false)
 </body>
