--- a/GE.WebUI/Views/Articles/_Preview.cshtml
+++ b/GE.WebUI/Views/Articles/_Preview.cshtml
@@ -2,17 +2,16 @@
 @{
     Layout = null;
 }
-
 <div class="row">
     @for (int i = 0; i < Model.Length; i++)
     {
         var m = Model[i];
         <div class="col-md-6">
-            <div class="pv-article">
+            <div class="pv-article @(i == Model.Length - 1 ? "last" : null)">
                 <h5 class="title">
                     <a href="@Url.Action(MVC.Articles.Details(m.Id))" target="_blank">@m.Title</a>
                 </h5>
-                @Html.DisplayFor(x=>m.PreviewInfo)
+                @Html.DisplayFor(x=>m.Info)
                 <p class="foreword">
                     @m.Foreword
                 </p>
