--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -54,6 +54,7 @@ footer .top li {
 
 footer .top .icons {
     float: right;
+    font-size:17px;
 
     @media (max-width: @screen-xs-max) {
         float: none;
@@ -68,7 +69,6 @@ footer .top .icons {
     @media (min-width: @screen-lg-min) {
     }
 }
-
 
 footer .bottom div[class^="col-"] {
     display: table-cell;
