--- a/GE.WebUI/Content/less/game-list.less
+++ b/GE.WebUI/Content/less/game-list.less
@@ -157,6 +157,7 @@
 .game-images {
     max-height: @g-l-h;
     overflow: hidden;
+    margin-bottom:@def-pad*2;
 
     @media (max-width: @screen-xs-max) {
         max-height: unset;
