--- a/GE.WebUI/Views/Articles/_ForGamersBlock.cshtml
+++ b/GE.WebUI/Views/Articles/_ForGamersBlock.cshtml
@@ -5,7 +5,7 @@
 
 <!--for gamers block-->
 <aside class="f-g-b">
-    <h2>Геймеру почитать</h2>
+    <h2 class="header">Геймеру почитать</h2>
     <div class="content">
         <div class="row">
             <div class="col-md-3">
