--- a/GE.WebUI/Content/less/list-article.less
+++ b/GE.WebUI/Content/less/list-article.less
@@ -93,9 +93,10 @@
 }
 
 .list-article-container .sx-list.t-mode {
+    margin-top:20px;
     @media (max-width: @screen-xs-max) {
         margin: 0 !important;
-        margin-bottom:-@def-pad;
+        margin-bottom:-@def-pad*2;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
