--- a/GE.WebUI/Views/Articles/List.cshtml
+++ b/GE.WebUI/Views/Articles/List.cshtml
@@ -3,6 +3,6 @@
     ViewBag.Title = "Статьи";
 }
 
-<h1>Статьи</h1>
+<h1 class="header">Статьи</h1>
 
 @Html.Partial(MVC.Articles.Views._Collection, Model)
