--- a/GE.WebUI/Views/News/_LastNewsBlock.cshtml
+++ b/GE.WebUI/Views/News/_LastNewsBlock.cshtml
@@ -5,7 +5,7 @@
 
 <!--last news block-->
 <aside class="l-n-b">
-    <h2>Последние новости</h2>
+    <h2 class="header">Последние новости</h2>
     <div class="content">
         <div class="row">
             <div class="col-md-4">
