--- a/GE.WebAdmin/Views/SeoInfo/Index.cshtml
+++ b/GE.WebAdmin/Views/SeoInfo/Index.cshtml
@@ -6,5 +6,5 @@
 <h2>@ViewBag.Title</h2>
 <br />
 <div id="grid-seo">
-    @Html.Partial(MVC.Seo.Views._GridView, Model)
+    @Html.Partial(MVC.SeoInfo.Views._GridView, Model)
 </div>
