--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -305,7 +305,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="@Url.Action(MVC.Seo.Index())"><i class="fa fa-cog fa-fw"></i> Seo оптимизация</a>
+                            <a href="@Url.Action(MVC.SeoInfo.Index())"><i class="fa fa-cog fa-fw"></i> Seo оптимизация</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> Настройки<span class="fa arrow"></span></a>
