--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
-
-@Html.Action(MVC.News.LastNewsBlock())
+﻿@Html.Action(MVC.News.LastNewsBlock())
 
 @Html.Action(MVC.Articles.ForGamersBlock())
 
