--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="@ViewBag.Description"/>
-    <title>@ViewBag.Title | @GE.WebUI.SiteSettings.Get()</title>
+    <meta name="description" content="@ViewBag.Description" />
+    <meta name="keywords" content="@ViewBag.Keywords"/>
+    <title>@ViewBag.Title | @GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName)</title>
 
     <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
 
