--- a/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
@@ -10,9 +10,13 @@
 }
 
 <figure class="mat-f-p">
-    @if(Model.FrontPictureId!=null)
+    @if (Model.FrontPictureId != null)
     {
         <img alt="@Model.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.FrontPictureId, width: 360))" />
+    }
+    else
+    {
+        <img alt="@Model.Title" src="~/Content/dist/i/article-empty.png" />
     }
 </figure>
 <div class="content">
