--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="last">
-                        © Все права защищены, @(DateTime.Now.Year) год<br />
+                        © Все права защищены, 2015 - @(DateTime.Now.Year) год<br />
                         Разработка и поддержка: <a href="mailto:simlex.dev.2014@gmail.com">simlex</a>
                     </div>
                 </div>
