--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="@Url.Action(MVC.Home.Index())">Главная</a>
+            <a class="navbar-brand" href="/">Главная</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
