--- a/GE.WebUI/Content/less/bootstrap-ext.less
+++ b/GE.WebUI/Content/less/bootstrap-ext.less
@@ -30,7 +30,7 @@ a{
     background-color:@color-black;
 }
 
-@tt-color:@colr-dark-blue;
+@tt-color:@color-dark-blue;
 .tooltip-inner {
     background-color: @tt-color;
     color: #fff;
@@ -52,4 +52,14 @@ a{
 
 .tooltip.left .tooltip-arrow {
     border-left-color: @tt-color;
+}
+
+.breadcrumb{
+    margin-top:20px;
+    border-radius:0;
+}
+
+.breadcrumb a, .breadcrumb span{
+    color:#888;
+    font-size:12px;
 }
