--- a/GE.WebUI/Content/less/for-gamers-block.less
+++ b/GE.WebUI/Content/less/for-gamers-block.less
@@ -97,7 +97,7 @@
 
 .f-g-b .games > li > a {
     display: block;
-    color: @colr-dark-blue;
+    color: @color-dark-blue;
     padding: @def-pad;
     padding-left: @def-pad*4;
     line-height: 1;
@@ -196,7 +196,7 @@ f-g-b .games > li > a:hover {
 }
 
 .pv-article .title {
-    color: @colr-dark-blue;
+    color: @color-dark-blue;
     font-size: 22px;
     text-decoration: underline;
     font-weight: bold;
