--- a/GE.WebUI/Content/less/list-news.less
+++ b/GE.WebUI/Content/less/list-news.less
@@ -93,7 +93,7 @@
 
 .list-news .content .link {
     font-size: 22px;
-    color: @colr-dark-blue;
+    color: @color-dark-blue;
     font-weight: 700;
     line-height: 1;
     display: block;
