--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -40,8 +40,8 @@ body {
 }
 
 .btn-transparent.dark-blue{
-    border:1px solid @colr-dark-blue;
-    color:@colr-dark-blue;
+    border:1px solid @color-dark-blue;
+    color:@color-dark-blue;
 }
 
 .btn-transparent.red {
