--- a/GE.WebUI/Content/less/sx-pager.less
+++ b/GE.WebUI/Content/less/sx-pager.less
@@ -13,6 +13,6 @@
 }
 
 .sx-pager > li.active > a, .sx-pager > li.active > a:hover {
-    background-color:@colr-dark-blue;
-    border-color:@colr-dark-blue;
+    background-color:@color-dark-blue;
+    border-color:@color-dark-blue;
 }
