--- a/GE.WebUI/Content/less/colors.less
+++ b/GE.WebUI/Content/less/colors.less
@@ -3,7 +3,8 @@
 @color-white:#fff;
 @color-bg:#ececec;
 @color-red:#c23721;
-@colr-dark-blue:#2d3e50;
+@color-dark-blue:#2d3e50;
 @colr-muted-blue:#93a2b1;
 @color-gray:#d7d7d7;
 @color-light-gray:#e0e0e0;
+@color-green:#029119;
