--- a/GE.WebUI/Views/News/List.cshtml
+++ b/GE.WebUI/Views/News/List.cshtml
@@ -2,6 +2,8 @@
 
 <h1 class="header">Новости</h1>
 
+@Html.Partial(MVC.Shared.Views._Breadcrumbs, (VMBreadcrumb[])ViewBag.Breadcrumbs)
+
 @Html.Partial(MVC.News.Views._Collection, Model)
 
 @section scripts{
