--- a/GE.WebUI/Content/less/for-gamers-block.less
+++ b/GE.WebUI/Content/less/for-gamers-block.less
@@ -156,6 +156,7 @@ f-g-b .games > li > a:hover {
 
 .pv-article{
     padding:0 @def-pad;
+    margin-bottom:@def-pad*2;
     @media (max-width: @screen-xs-max) {
         margin-bottom:@def-pad*4;
     }
@@ -214,4 +215,8 @@ f-g-b .games > li > a:hover {
 
 .f-g-b .btn-transparent.red {
     margin: @def-pad*2 0;
+}
+
+.f-g-b #materials-preview div[class^="col-"]{
+    
 }
