--- a/GE.WebUI/Content/less/list-article.less
+++ b/GE.WebUI/Content/less/list-article.less
@@ -28,7 +28,7 @@
 }
 
 .list-article figure{
-
+    text-align:center;
 }
 
 .list-article figure > img {
@@ -109,7 +109,7 @@
 }
 
 .list-article-container .sx-list.t-mode {
-    margin-top:20px;
+    margin-top:@def-pad*2;
     @media (max-width: @screen-xs-max) {
         margin: 0 !important;
         margin-bottom:-@def-pad*2;
