--- a/GE.WebUI/Content/less/list-news.less
+++ b/GE.WebUI/Content/less/list-news.less
@@ -105,7 +105,7 @@
 }
 
 .list-news-container .sx-list.t-mode {
-    margin-top:20px;
+    margin-top:@def-pad*2;
     @media (max-width: @screen-xs-max) {
         margin: 0 !important;
         margin-bottom:-@def-pad*2;
