--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="@ViewBag.Description" />
     <meta name="keywords" content="@ViewBag.Keywords"/>
-    <title>@ViewBag.Title | @GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName)</title>
+    <title>@ViewBag.Title</title>
 
     <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
 
