--- a/GE.WebAdmin/Views/News/Edit.cshtml
+++ b/GE.WebAdmin/Views/News/Edit.cshtml
@@ -2,6 +2,7 @@
 @{
     var isNew = Model.Id == 0;
     ViewBag.Title=isNew ? "Добавить новость" : "Редактировать новость \"" + Model.Title + "\"";
+    ViewBag.GameTitle = isNew ? null : Model.Game.Title;
 }
 <h2>@ViewBag.Title</h2>
 @if (!isNew)
