--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -13,7 +13,7 @@ footer {
 
     @media (max-width: @screen-xs-max) {
         background-image: url(../i/footer-bg-xs.jpg);
-        background-size: auto 100%;
+        background-size: 100% 100%;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -68,6 +68,10 @@ footer .top .icons {
 
     @media (min-width: @screen-lg-min) {
     }
+}
+
+footer .bottom .row{
+    padding:0 @def-pad;
 }
 
 footer .bottom div[class^="col-"] {
