--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -82,7 +82,7 @@ footer .bottom div[class^="col-"] {
 
     @media (max-width: @screen-xs-max) {
         display: block;
-        padding: 10px 15px;
+        /*padding: 10px 15px;*/
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
