--- a/GE.WebAdmin/Views/Settings/EditSite.cshtml
+++ b/GE.WebAdmin/Views/Settings/EditSite.cshtml
@@ -13,6 +13,7 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.OldLogoPath)
     @Html.HiddenFor(x => x.OldSiteName)
+    @Html.HiddenFor(x => x.OldSiteBgPath)
 
     <div class="row">
         <div class="col-md-12">
@@ -27,6 +28,14 @@
             @Html.LabelFor(x => x.LogoPath, new { @class = "control-label" })
             @Html.EditorFor(x => x.LogoPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к изображению" } })
             @Html.ValidationMessageFor(x => x.LogoPath)
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-md-12">
+            @Html.LabelFor(x => x.SiteBgPath, new { @class = "control-label" })
+            @Html.EditorFor(x => x.SiteBgPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к файлу фона" } })
+            @Html.ValidationMessageFor(x => x.SiteBgPath)
         </div>
     </div>
     <br />
