--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -319,6 +319,9 @@
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
+                        <li>
+                            <a href="@Url.Action(MVC.Request.Index())"><i class="fa fa-share-alt fa-fw"></i> Статистика запросов</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
