--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>@(!string.IsNullOrEmpty(ViewBag.Title) ? ViewBag.Title + " | " + Constants.AppName : Constants.AppName)</title>
+    <link rel="icon" href="~/faveicon.png" type="image/png" />
 
     <!-- Bootstrap -->
     <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
@@ -305,7 +306,16 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="@Url.Action(MVC.SeoInfo.Index())"><i class="fa fa-cog fa-fw"></i> Seo оптимизация</a>
+                            <a href="#"><i class="fa fa-cog fa-fw"></i> Seo оптимизация<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="@Url.Action(MVC.SeoInfo.Index())"><i class="fa fa-cogs"></i> Метатеги</a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action(MVC.Redirects.Index())"><i class="fa fa-arrow-right"></i> 301 редирект</a>
+                                </li>
+                            </ul>
+                            <!-- /.nav-second-level -->
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> Настройки<span class="fa arrow"></span></a>
