--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -44,6 +44,11 @@ body {
     color:@color-dark-blue;
 }
 
+.btn-transparent.white{
+    border:1px solid @color-white;
+    color:@color-white;
+}
+
 .btn-transparent.red {
     border: 1px solid @color-red;
     color: @color-red;
