--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -282,7 +282,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="@Url.Action(MVC.Games.Index())"><i class="fa fa-fighter-jet fa-fw"></i> Игры</a>
+                            <a href="@Url.Action(MVC.Games.Index())"><i class="fa fa-space-shuttle fa-fw"></i> Игры</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-archive fa-fw"></i> Материалы<span class="fa arrow"></span></a>
@@ -314,6 +314,9 @@
                                 <li>
                                     <a href="@Url.Action(MVC.Redirects.Index())"><i class="fa fa-arrow-right"></i> 301 редирект</a>
                                 </li>
+                                <li>
+                                    <a href="@Url.Action(MVC.Settings.EditRobotsFile())"><i class="fa fa-ship"></i> robot.txt</a>
+                                </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
@@ -330,7 +333,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="@Url.Action(MVC.Request.Index())"><i class="fa fa-share-alt fa-fw"></i> Статистика запросов</a>
+                            <a href="@Url.Action(MVC.Request.Index())"><i class="fa fa-history fa-fw"></i> Статистика запросов</a>
                         </li>
                     </ul>
                 </div>
